src/objects/MBMS_Artist_News__c.object
<CustomObject>
    <description>This is an object for storing information about the Artist News.</description>
    <fields>
        <fullName>MBMS_Artist__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>A field that stores a lookup to the Artist object.</description>
        <inlineHelpText>Artist.</inlineHelpText>
        <label>Artist</label>
        <referenceTo>MBMS_Artist__c</referenceTo>
        <relationshipLabel>Artist News</relationshipLabel>
        <relationshipName>Artist_News</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>MBMS_Content__c</fullName>
        <description>A field that stores the news content.</description>
        <inlineHelpText>News content.</inlineHelpText>
        <label>Content</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>MBMS_Image_URL__c</fullName>
        <description>A field that stores an URL of the News image.</description>
        <inlineHelpText>URL of news image.</inlineHelpText>
        <label>Image URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>MBMS_Image__c</fullName>
        <description>A formula field that displays news image image or string value (if the image URL is not available).</description>
        <formula>IF(NOT(ISBLANK(MBMS_Image_URL__c)), IMAGE(MBMS_Image_URL__c, &apos;Image&apos;), &quot;News image is not available.&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>News image.</inlineHelpText>
        <label>Image</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MBMS_Tags__c</fullName>
        <description>A field that stores comma separated news tags.</description>
        <inlineHelpText>News tags.</inlineHelpText>
        <label>Tags</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MBMS_Title__c</fullName>
        <description>A field that stores the news title.</description>
        <inlineHelpText>News title.</inlineHelpText>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Artist News</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>All_With_Details</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>MBMS_Title__c</columns>
        <columns>MBMS_Artist__c</columns>
        <columns>MBMS_Tags__c</columns>
        <columns>MBMS_Image_URL__c</columns>
        <filterScope>Mine</filterScope>
        <label>All With Details</label>
    </listViews>
    <nameField>
        <label>Artist News Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Artist News</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>